--- a/mods/fastload.pw.toml
+++ b/mods/fastload.pw.toml
@@ -1,13 +1,13 @@
 name = "Fastload"
-filename = "Fastload-1.1.3+1.19.jar"
+filename = "Fastload-1.1.4+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/kCpssoSb/versions/1.19.fabric.1.1.3/Fastload-1.1.3%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/kCpssoSb/versions/1.19.fabric.1.1.4/Fastload-1.1.4%2B1.19.jar"
 hash-format = "sha1"
-hash = "3084ee7be20e2376061be7c1e09cf6d3631b4a18"
+hash = "81953f44c055c373f28a7f5a59a29151cbdd230f"
 
 [update]
 [update.modrinth]
 mod-id = "kCpssoSb"
-version = "DJkYeZd5"
+version = "QNff3l3l"
