--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,13 +1,13 @@
 name = "ShulkerBoxTooltip"
-filename = "shulkerboxtooltip-3.0.9+1.19.jar"
+filename = "shulkerboxtooltip-3.0.10+1.19.jar"
 side = "both"
 
 [download]
+url = "https://cdn.modrinth.com/data/2M01OLQq/versions/3.0.10+1.19/shulkerboxtooltip-3.0.10%2B1.19.jar"
 hash-format = "sha1"
-hash = "023270ac4d8c28ee2fd58500a10cc0bfa6aee73e"
-mode = "metadata:curseforge"
+hash = "b72deb26591e1bd4fc5cdaf9a708fd57f0335280"
 
 [update]
-[update.curseforge]
-file-id = 3828073
-project-id = 315811
+[update.modrinth]
+mod-id = "2M01OLQq"
+version = "APeGIMUT"
