--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-5.7.28-fabric.jar"
+filename = "architectury-5.9.31-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/5.7.28+fabric/architectury-5.7.28-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/5.9.31+fabric/architectury-5.9.31-fabric.jar"
 hash-format = "sha1"
-hash = "aa38ae9cc2e978e4ec87ff891f7b02ea0c0ee1b8"
+hash = "2a932e9145b123591a78ea045e65b31bc8a330ac"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "Hf0Bau1j"
+version = "d9yizwYu"
