--- a/mods/gamma-utils.pw.toml
+++ b/mods/gamma-utils.pw.toml
@@ -1,13 +1,13 @@
 name = "Gamma Utils"
-filename = "Gamma-Utils-1.6.8-mc1.19.jar"
+filename = "Gamma-Utils-1.6.9-mc1.19.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/wdLuzzEP/versions/1.6.8/Gamma-Utils-1.6.8-mc1.19.jar"
+url = "https://cdn.modrinth.com/data/wdLuzzEP/versions/1.6.9/Gamma-Utils-1.6.9-mc1.19.jar"
 hash-format = "sha1"
-hash = "2589a1b5a88a434f93a271fa1f5cefed93538bf9"
+hash = "483c0cbd72020444770f58c505f7fbb7912c06e2"
 
 [update]
 [update.modrinth]
 mod-id = "wdLuzzEP"
-version = "asuG8Tao"
+version = "onouWDKb"
