--- a/mods/memoryleakfix.pw.toml
+++ b/mods/memoryleakfix.pw.toml
@@ -1,13 +1,13 @@
 name = "Memory Leak Fix"
-filename = "memoryleakfix-1.19-0.5.1.jar"
+filename = "memoryleakfix-1.19-0.5.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/NRjRiSSD/versions/v0.5.1/memoryleakfix-1.19-0.5.1.jar"
+url = "https://cdn.modrinth.com/data/NRjRiSSD/versions/v0.5.4/memoryleakfix-1.19-0.5.4.jar"
 hash-format = "sha1"
-hash = "ff219cbeb6b0a3efdb6d4f895edb2aada6bdf139"
+hash = "2776672be09acd23d8b94f382b3ddb1674b173a2"
 
 [update]
 [update.modrinth]
 mod-id = "NRjRiSSD"
-version = "RZJVmohY"
+version = "R4CYPhDX"
