--- a/mods/arrp.pw.toml
+++ b/mods/arrp.pw.toml
@@ -1,13 +1,13 @@
 name = "ARRP"
-filename = "arrp-0.6.2.jar"
+filename = "arrp-0.6.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/USLVyT7V/versions/0.6.2/arrp-0.6.2.jar"
+url = "https://cdn.modrinth.com/data/USLVyT7V/versions/0.6.4/arrp-0.6.4.jar"
 hash-format = "sha1"
-hash = "4128c47afb42c46388e0ed282a617d77b3d5ee05"
+hash = "d18e0e8fd5373b60eed33094d1b511da29368248"
 
 [update]
 [update.modrinth]
 mod-id = "USLVyT7V"
-version = "gx75wSHM"
+version = "fZRj04a2"
