--- a/mods/statssearch.pw.toml
+++ b/mods/statssearch.pw.toml
@@ -1,13 +1,13 @@
 name = "StatsSearch"
-filename = "statssearch-1.19-fabric0.53.3-1.0.1.jar"
+filename = "statssearch-1.19.1-fabric0.58.5-1.0.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/jM41BciC/versions/1.19-fabric0.53.3-1.0.1/statssearch-1.19-fabric0.53.3-1.0.1.jar"
+url = "https://cdn.modrinth.com/data/jM41BciC/versions/1.19.1-fabric0.58.5-1.0.1/statssearch-1.19.1-fabric0.58.5-1.0.1.jar"
 hash-format = "sha1"
-hash = "0e7428f250e21f76dd92e15de58275a305782833"
+hash = "542d2630baae7431a117dbdc123565a41916d471"
 
 [update]
 [update.modrinth]
 mod-id = "jM41BciC"
-version = "kaBiZ0rQ"
+version = "POvJr6o2"
