Updated a couple of mods

--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,13 +1,13 @@
 name = "ShulkerBoxTooltip"
-filename = "shulkerboxtooltip-3.1.0+1.19.jar"
+filename = "shulkerboxtooltip-3.1.1+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/2M01OLQq/versions/3.1.0+1.19/shulkerboxtooltip-3.1.0%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/2M01OLQq/versions/3.1.1+1.19-fabric/shulkerboxtooltip-3.1.1%2B1.19.jar"
 hash-format = "sha1"
-hash = "c6c70214664b91dd2b8d13c49cc6b41e607c434d"
+hash = "281e8f4316a6921cecf8059ac7b744c4e5eafe16"
 
 [update]
 [update.modrinth]
 mod-id = "2M01OLQq"
-version = "jJqGuDzK"
+version = "HKDGqnCy"
