--- a/mods/zoomify.pw.toml
+++ b/mods/zoomify.pw.toml
@@ -1,13 +1,13 @@
 name = "Zoomify"
-filename = "Zoomify-2.0.0.jar"
+filename = "Zoomify-2.0.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/2.0.0/Zoomify-2.0.0.jar"
+url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/2.0.3/Zoomify-2.0.3.jar"
 hash-format = "sha1"
-hash = "0321439959f74f6076f98dd946bfb507f83603f1"
+hash = "758f76166abdeb2e38273468c5dc455be476f18b"
 
 [update]
 [update.modrinth]
 mod-id = "w7ThoJFB"
-version = "LropUbSI"
+version = "t2MUOMy5"
