--- a/mods/fabric-api.pw.toml
+++ b/mods/fabric-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric API"
-filename = "fabric-api-0.58.5+1.19.1.jar"
+filename = "fabric-api-0.58.6+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/0.58.5+1.19.1/fabric-api-0.58.5%2B1.19.1.jar"
+url = "https://cdn.modrinth.com/data/P7dR8mSH/versions/0.58.6+1.19.2/fabric-api-0.58.6%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "c758f5dfadf35a9ab4f7f688094d599e30b2cbdb"
+hash = "8e73d8015382496f93f5215fe6b16c41f1d230a2"
 
 [update]
 [update.modrinth]
 mod-id = "P7dR8mSH"
-version = "3fY6NddT"
+version = "6Iv0Y14L"
