--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-5.10.33-fabric.jar"
+filename = "architectury-5.12.45-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/5.10.33+fabric/architectury-5.10.33-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/ZrvfXtKK/architectury-5.12.45-fabric.jar"
 hash-format = "sha1"
-hash = "996960052bad28f62599bff75315930d58fbce9c"
+hash = "ccd37b3831df95b498a300b53881a3299d3b0188"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "QbVhURET"
+version = "ZrvfXtKK"
