--- a/mods/freecam.pw.toml
+++ b/mods/freecam.pw.toml
@@ -1,13 +1,13 @@
 name = "Freecam (Modrinth Edition)"
-filename = "freecam-modrinth-1.1.4+1.19.jar"
+filename = "freecam-modrinth-1.1.6+1.19.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/XeEZ3fK2/versions/1.1.4-mc1.19/freecam-modrinth-1.1.4%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/XeEZ3fK2/versions/yjLgFQ4M/freecam-modrinth-1.1.6%2B1.19.jar"
 hash-format = "sha1"
-hash = "7f7316142c48e25bf8d347ab23060c1aa752dbb5"
+hash = "bf8a291a31541332abfe5dd0bc2e24eb89fde81c"
 
 [update]
 [update.modrinth]
 mod-id = "XeEZ3fK2"
-version = "bo68nrRs"
+version = "yjLgFQ4M"
