--- a/mods/midnightlib.pw.toml
+++ b/mods/midnightlib.pw.toml
@@ -1,13 +1,13 @@
 name = "MidnightLib"
-filename = "midnightlib-0.5.2.jar"
+filename = "midnightlib-0.6.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/codAaoxh/versions/0.5.2/midnightlib-0.5.2.jar"
+url = "https://cdn.modrinth.com/data/codAaoxh/versions/s2fTj4LM/midnightlib-0.6.0.jar"
 hash-format = "sha1"
-hash = "8a35e4c7ea05fac48762e529d46e82c988a39730"
+hash = "6da31f2d13b4e5d49574ff235e45a2c6f8501ecd"
 
 [update]
 [update.modrinth]
 mod-id = "codAaoxh"
-version = "E9lkXHyn"
+version = "s2fTj4LM"
