--- a/mods/zoomify.pw.toml
+++ b/mods/zoomify.pw.toml
@@ -1,13 +1,13 @@
 name = "Zoomify"
-filename = "Zoomify-1.7.1.jar"
+filename = "Zoomify-2.6.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/1.7.1/Zoomify-1.7.1.jar"
+url = "https://cdn.modrinth.com/data/w7ThoJFB/versions/zS4oS6ht/Zoomify-2.6.0.jar"
 hash-format = "sha1"
-hash = "0807fefc9f576b61318750ee2d328e35cb9c3ba1"
+hash = "47a6412898781fa4dd203b6cccbb673102b33793"
 
 [update]
 [update.modrinth]
 mod-id = "w7ThoJFB"
-version = "ywAz0NBY"
+version = "zS4oS6ht"
