--- a/mods/chat-heads.pw.toml
+++ b/mods/chat-heads.pw.toml
@@ -1,13 +1,13 @@
 name = "Chat Heads"
-filename = "chat_heads-0.7.0-forge-1.19.1.jar"
+filename = "chat_heads-0.7.1-fabric-1.19.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "30672181e7e7e073af894b3d9ac2304e46a6a623"
+hash = "a514af9368f6c75130df839941f7cdc353b16d7c"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3907258
+file-id = 3923444
 project-id = 407206
