--- a/mods/debugify.pw.toml
+++ b/mods/debugify.pw.toml
@@ -1,13 +1,13 @@
 name = "Debugify"
-filename = "Debugify-2.4.0.jar"
+filename = "Debugify-2.7.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/2.4.0/Debugify-2.4.0.jar"
+url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/pYAlD9TK/Debugify-2.7.1.jar"
 hash-format = "sha1"
-hash = "4ee39be6677b77217e86eba172ea35b7227d86ab"
+hash = "24f4ab766406d0d47faa5e860ee9cd47759b6e70"
 
 [update]
 [update.modrinth]
 mod-id = "QwxR6Gcd"
-version = "qGM9M0wh"
+version = "pYAlD9TK"
