--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Language Kotlin"
-filename = "fabric-language-kotlin-1.8.2+kotlin.1.7.10.jar"
+filename = "fabric-language-kotlin-1.8.4+kotlin.1.7.20.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/1.8.2+kotlin.1.7.10/fabric-language-kotlin-1.8.2%2Bkotlin.1.7.10.jar"
+url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/allNCj2E/fabric-language-kotlin-1.8.4%2Bkotlin.1.7.20.jar"
 hash-format = "sha1"
-hash = "e8a1dba4932c7b361525f17ed73636675765c5c9"
+hash = "f66781e06aaace31c370238554aeb99d1ec6bc98"
 
 [update]
 [update.modrinth]
 mod-id = "Ha28R6CL"
-version = "5Aq3SFbi"
+version = "allNCj2E"
