--- a/mods/midnightlib.pw.toml
+++ b/mods/midnightlib.pw.toml
@@ -1,13 +1,13 @@
 name = "MidnightLib"
-filename = "midnightlib-0.5.2.jar"
+filename = "midnightlib-0.6.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/codAaoxh/versions/0.5.2/midnightlib-0.5.2.jar"
+url = "https://cdn.modrinth.com/data/codAaoxh/versions/WjT0Llfm/midnightlib-0.6.1.jar"
 hash-format = "sha1"
-hash = "8a35e4c7ea05fac48762e529d46e82c988a39730"
+hash = "1900376fa98df38ceec337874fc5ffe33501e5f0"
 
 [update]
 [update.modrinth]
 mod-id = "codAaoxh"
-version = "E9lkXHyn"
+version = "WjT0Llfm"
