--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,13 +1,13 @@
 name = "ShulkerBoxTooltip"
-filename = "shulkerboxtooltip-3.1.1+1.19.jar"
+filename = "shulkerboxtooltip-fabric-3.1.3+1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/2M01OLQq/versions/3.1.1+1.19-fabric/shulkerboxtooltip-3.1.1%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/2M01OLQq/versions/K5IR07m0/shulkerboxtooltip-fabric-3.1.3%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "281e8f4316a6921cecf8059ac7b744c4e5eafe16"
+hash = "ce970c272ec943a3be03779a8003c50f272427ca"
 
 [update]
 [update.modrinth]
 mod-id = "2M01OLQq"
-version = "HKDGqnCy"
+version = "K5IR07m0"
