--- a/mods/sodium-extra.pw.toml
+++ b/mods/sodium-extra.pw.toml
@@ -1,13 +1,13 @@
 name = "Sodium Extra"
-filename = "sodium-extra-0.4.6+mc1.19-build.47.jar"
+filename = "sodium-extra-0.4.11+mc1.19.2-build.68.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/PtjYWJkn/versions/mc1.19-0.4.6/sodium-extra-0.4.6%2Bmc1.19-build.47.jar"
+url = "https://cdn.modrinth.com/data/PtjYWJkn/versions/xJ8SShUa/sodium-extra-0.4.11%2Bmc1.19.2-build.68.jar"
 hash-format = "sha1"
-hash = "e9c3a6b3a9fbe3db3dbb98da3ed53e3f7e557149"
+hash = "367a728b7fb867c71a3f5958d1e04c2ade50e7d6"
 
 [update]
 [update.modrinth]
 mod-id = "PtjYWJkn"
-version = "tA6TDKYR"
+version = "xJ8SShUa"
