--- a/mods/raised.pw.toml
+++ b/mods/raised.pw.toml
@@ -1,13 +1,13 @@
 name = "Raised"
-filename = "raised-fabric-1.19.2-1.1.3.jar"
+filename = "raised-fabric-1.19.2-1.1.4.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/nCQRBEiR/versions/13hdMKsl/raised-fabric-1.19.2-1.1.3.jar"
+url = "https://cdn.modrinth.com/data/nCQRBEiR/versions/41yzExMY/raised-fabric-1.19.2-1.1.4.jar"
 hash-format = "sha1"
-hash = "3f949a83f35103c68115fd2ab495f425bc31b0bf"
+hash = "e542bd322d42ceac68b306ccbf19eb216638c6e0"
 
 [update]
 [update.modrinth]
 mod-id = "nCQRBEiR"
-version = "13hdMKsl"
+version = "41yzExMY"
