--- a/mods/fastload.pw.toml
+++ b/mods/fastload.pw.toml
@@ -1,13 +1,13 @@
 name = "Fastload"
-filename = "Fastload-1.2.0.jar"
+filename = "Fastload+1.19.2-1.3.3.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/kCpssoSb/versions/1uyZI4Sv/Fastload-1.2.0.jar"
+url = "https://cdn.modrinth.com/data/kCpssoSb/versions/ksl46t40/Fastload%2B1.19.2-1.3.3.jar"
 hash-format = "sha1"
-hash = "762ef120fe4c0249146b5d3c90c3667dbb9f63b4"
+hash = "a857685b648d92b3998ed318b0f5392e8011f81c"
 
 [update]
 [update.modrinth]
 mod-id = "kCpssoSb"
-version = "1uyZI4Sv"
+version = "ksl46t40"
