--- a/mods/midnightlib.pw.toml
+++ b/mods/midnightlib.pw.toml
@@ -1,13 +1,13 @@
 name = "MidnightLib"
-filename = "midnightlib-0.6.1.jar"
+filename = "midnightlib-fabric-1.0.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/codAaoxh/versions/WjT0Llfm/midnightlib-0.6.1.jar"
+url = "https://cdn.modrinth.com/data/codAaoxh/versions/p0LjncVW/midnightlib-fabric-1.0.0.jar"
 hash-format = "sha1"
-hash = "1900376fa98df38ceec337874fc5ffe33501e5f0"
+hash = "a4d7c5f2f191e7e0fc2b272116212ac8134652bf"
 
 [update]
 [update.modrinth]
 mod-id = "codAaoxh"
-version = "WjT0Llfm"
+version = "p0LjncVW"
