--- a/mods/visuality.pw.toml
+++ b/mods/visuality.pw.toml
@@ -1,13 +1,13 @@
 name = "Visuality"
-filename = "visuality-0.5.1.jar"
+filename = "visuality-0.5.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/0.5.1/visuality-0.5.1.jar"
+url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/UFd2DEF0/visuality-0.5.3.jar"
 hash-format = "sha1"
-hash = "0ad6bde466a4789b60c2b2c899480fb8fbfa4e9b"
+hash = "bef060445f8631cf83d1816ec8bde341b0804473"
 
 [update]
 [update.modrinth]
 mod-id = "rI0hvYcd"
-version = "JHooKThf"
+version = "UFd2DEF0"
