--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -1,13 +1,13 @@
 name = "YetAnotherConfigLib"
-filename = "YetAnotherConfigLib-1.5.0.jar"
+filename = "YetAnotherConfigLib-1.7.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/FxNs8Edj/YetAnotherConfigLib-1.5.0.jar"
+url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/VdIvtIwz/YetAnotherConfigLib-1.7.0.jar"
 hash-format = "sha1"
-hash = "6928a199868ed4e4131b4fe0c401a1f2184b4db6"
+hash = "42f244d83321023711e237799cc2cba7adb4cee1"
 
 [update]
 [update.modrinth]
 mod-id = "1eAoo2KR"
-version = "FxNs8Edj"
+version = "VdIvtIwz"
