--- a/mods/lithium.pw.toml
+++ b/mods/lithium.pw.toml
@@ -1,13 +1,13 @@
 name = "Lithium"
-filename = "lithium-fabric-mc1.19.2-0.10.2.jar"
+filename = "lithium-fabric-mc1.19-0.8.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/gvQqBUqZ/versions/IQxlSIiw/lithium-fabric-mc1.19.2-0.10.2.jar"
+url = "https://cdn.modrinth.com/data/gvQqBUqZ/versions/mc1.19-0.8.1/lithium-fabric-mc1.19-0.8.1.jar"
 hash-format = "sha1"
-hash = "bfca8397fa9034410b3846e3938ead600da5a420"
+hash = "8316f71030ffc74af09b781d3281d575b61db0e0"
 
 [update]
 [update.modrinth]
 mod-id = "gvQqBUqZ"
-version = "IQxlSIiw"
+version = "sIKhU9s4"
