--- a/mods/shulkerboxtooltip.pw.toml
+++ b/mods/shulkerboxtooltip.pw.toml
@@ -1,13 +1,13 @@
 name = "ShulkerBoxTooltip"
-filename = "shulkerboxtooltip-fabric-3.2.2+1.19.2.jar"
+filename = "shulkerboxtooltip-3.1.1+1.19.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/2M01OLQq/versions/luwoDnlv/shulkerboxtooltip-fabric-3.2.2%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/2M01OLQq/versions/3.1.1+1.19-fabric/shulkerboxtooltip-3.1.1%2B1.19.jar"
 hash-format = "sha1"
-hash = "7e720aa586dc76feb7296b1ca4c602b183c6222e"
+hash = "281e8f4316a6921cecf8059ac7b744c4e5eafe16"
 
 [update]
 [update.modrinth]
 mod-id = "2M01OLQq"
-version = "luwoDnlv"
+version = "HKDGqnCy"
