--- a/mods/thorium.pw.toml
+++ b/mods/thorium.pw.toml
@@ -1,13 +1,13 @@
 name = "thorium"
-filename = "thorium-1.3.2.jar"
+filename = "thorium-1.3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/ImUQFWcy/versions/1.3.2/thorium-1.3.2.jar"
+url = "https://cdn.modrinth.com/data/ImUQFWcy/versions/1.3.1/thorium-1.3.1.jar"
 hash-format = "sha1"
-hash = "3bda3d6ad35f0f0be802f86ca782bba103e81127"
+hash = "d9fc39e4fee1cd931c933f245e85a9233b3e0ccd"
 
 [update]
 [update.modrinth]
 mod-id = "ImUQFWcy"
-version = "vntUAZDw"
+version = "agtPmHP9"
