--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-6.3.49-fabric.jar"
+filename = "architectury-6.5.69-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/KE5bu0Vd/architectury-6.3.49-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/GEBcq08y/architectury-6.5.69-fabric.jar"
 hash-format = "sha1"
-hash = "9c6173d2c38306fd8f87d33e259d33fecb5e1dea"
+hash = "09aaab6454e67e90143213fc711f5bed5adc053e"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "KE5bu0Vd"
+version = "GEBcq08y"
