--- a/mods/fastload.pw.toml
+++ b/mods/fastload.pw.toml
@@ -1,13 +1,13 @@
 name = "Fastload"
-filename = "Fastload+1.19.2-1.3.3.jar"
+filename = "Fastload+1.19.2-2.6.11.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/kCpssoSb/versions/ksl46t40/Fastload%2B1.19.2-1.3.3.jar"
+url = "https://cdn.modrinth.com/data/kCpssoSb/versions/XzqjhWvy/Fastload%2B1.19.2-2.6.11.jar"
 hash-format = "sha1"
-hash = "a857685b648d92b3998ed318b0f5392e8011f81c"
+hash = "e474e121380bdd46663e62d8106e46c87ec939d8"
 
 [update]
 [update.modrinth]
 mod-id = "kCpssoSb"
-version = "ksl46t40"
+version = "XzqjhWvy"
