--- a/mods/figura.pw.toml
+++ b/mods/figura.pw.toml
@@ -1,13 +1,13 @@
 name = "Figura"
-filename = "figura-0.1.0-rc.10+1.19.2.jar"
+filename = "figura-0.1.0-rc.14+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/B3csO4KD/versions/acMgNxOn/figura-0.1.0-rc.10%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/B3csO4KD/versions/GYJfKR6m/figura-0.1.0-rc.14%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "48ef7de5dea59a318258de2fa734a8335c8fea93"
+hash = "9e8f58873e5408107767a743d4b1aa6c119323e0"
 
 [update]
 [update.modrinth]
 mod-id = "B3csO4KD"
-version = "acMgNxOn"
+version = "GYJfKR6m"
