--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.19.2-1.4.0.jar"
+filename = "iris-mc1.19.2-1.5.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/RRjXTE6G/iris-mc1.19.2-1.4.0.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/7cPNddw8/iris-mc1.19.2-1.5.2.jar"
 hash-format = "sha1"
-hash = "2e62f68c5ae5b4b38728e84ab7779023677bd78a"
+hash = "5377f13f7315dd48111bd431bb8ea6e6137a8c62"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "RRjXTE6G"
+version = "7cPNddw8"
