--- a/mods/moreculling.pw.toml
+++ b/mods/moreculling.pw.toml
@@ -1,13 +1,13 @@
 name = "More Culling"
-filename = "moreculling-1.19.1-0.10.0.jar"
+filename = "moreculling-1.19.1-0.17.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/51shyZVL/versions/v0.10.0/moreculling-1.19.1-0.10.0.jar"
+url = "https://cdn.modrinth.com/data/51shyZVL/versions/5hjaMcPN/moreculling-1.19.1-0.17.0.jar"
 hash-format = "sha1"
-hash = "0f0a694d8bbfce754bd468a2975c6bf3b65e23c8"
+hash = "bb08f735f0005d9fb219d71682f667dd6db41c7d"
 
 [update]
 [update.modrinth]
 mod-id = "51shyZVL"
-version = "xO1K8c7X"
+version = "5hjaMcPN"
