--- a/mods/mouse-wheelie.pw.toml
+++ b/mods/mouse-wheelie.pw.toml
@@ -1,13 +1,13 @@
 name = "Mouse Wheelie"
-filename = "mousewheelie-1.10.2+mc1.19-pre1.jar"
+filename = "mousewheelie-1.10.7+mc1.19.2.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/u5Ic2U1u/versions/1.10.2+mc1.19-pre1/mousewheelie-1.10.2%2Bmc1.19-pre1.jar"
+url = "https://cdn.modrinth.com/data/u5Ic2U1u/versions/hUZXtd1H/mousewheelie-1.10.7%2Bmc1.19.2.jar"
 hash-format = "sha1"
-hash = "2ca595c5503f7012057826a0f72a788681353763"
+hash = "e6487a2a14c6d049397555906b4977bef13ed524"
 
 [update]
 [update.modrinth]
 mod-id = "u5Ic2U1u"
-version = "f24IuTiJ"
+version = "hUZXtd1H"
