--- a/mods/nmuk.pw.toml
+++ b/mods/nmuk.pw.toml
@@ -1,13 +1,13 @@
 name = "No More Useless Keys - NMUK"
-filename = "nmuk-1.0.1+mc1.19.jar"
+filename = "nmuk-1.1.0+mc1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YCcdA1Lp/versions/1.0.1+mc1.19/nmuk-1.0.1%2Bmc1.19.jar"
+url = "https://cdn.modrinth.com/data/YCcdA1Lp/versions/M7uGVxUD/nmuk-1.1.0%2Bmc1.19.2.jar"
 hash-format = "sha1"
-hash = "c6ffc90d3a4d437ca7948f1e54f5275dac20734a"
+hash = "9e8db70925d079088f38532280b8ecc666599927"
 
 [update]
 [update.modrinth]
 mod-id = "YCcdA1Lp"
-version = "U1IsTa2s"
+version = "M7uGVxUD"
