--- a/mods/no-resource-pack-warnings.pw.toml
+++ b/mods/no-resource-pack-warnings.pw.toml
@@ -1,13 +1,13 @@
 name = "No Resource Pack Warnings"
-filename = "no-resource-pack-warnings-1.0.0.jar"
+filename = "no-resource-pack-warnings-1.1.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/6xKUDQcB/versions/1.0.0/no-resource-pack-warnings-1.0.0.jar"
+url = "https://cdn.modrinth.com/data/6xKUDQcB/versions/5cax8rZV/no-resource-pack-warnings-1.1.1.jar"
 hash-format = "sha1"
-hash = "3b69e8d0ea05343008abe0eb65cd5c9ffa21df8c"
+hash = "89a4b4646509805356e9e3c7ef2755ce51d8e73f"
 
 [update]
 [update.modrinth]
 mod-id = "6xKUDQcB"
-version = "hejC8hg2"
+version = "5cax8rZV"
