--- a/mods/ukulib.pw.toml
+++ b/mods/ukulib.pw.toml
@@ -1,13 +1,13 @@
 name = "ukulib"
-filename = "ukulib-0.3.0+1.19.2.jar"
+filename = "ukulib-0.6.1+1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/Y8uFrUil/versions/PVtRfGtN/ukulib-0.3.0%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/Y8uFrUil/versions/genLDUJY/ukulib-0.6.1%2B1.19.2.jar"
 hash-format = "sha1"
-hash = "7a62e49a3f1c2fec44a469c4a80aefa132d7964b"
+hash = "ddc3ac92221f5b212b13f3dbc276d7d57f859003"
 
 [update]
 [update.modrinth]
 mod-id = "Y8uFrUil"
-version = "PVtRfGtN"
+version = "genLDUJY"
