--- a/mods/visuality.pw.toml
+++ b/mods/visuality.pw.toml
@@ -1,13 +1,13 @@
 name = "Visuality"
-filename = "visuality-0.5.3.jar"
+filename = "visuality-0.5.6.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/UFd2DEF0/visuality-0.5.3.jar"
+url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/TrPcZLjs/visuality-0.5.6.jar"
 hash-format = "sha1"
-hash = "bef060445f8631cf83d1816ec8bde341b0804473"
+hash = "86eafa73e5de6f6aec6401312f3b242a6e48b94b"
 
 [update]
 [update.modrinth]
 mod-id = "rI0hvYcd"
-version = "UFd2DEF0"
+version = "TrPcZLjs"
