--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -1,13 +1,13 @@
 name = "YetAnotherConfigLib"
-filename = "YetAnotherConfigLib-1.7.0.jar"
+filename = "YetAnotherConfigLib-2.2.0-for-1.19.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/VdIvtIwz/YetAnotherConfigLib-1.7.0.jar"
+url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/bIVYcRpm/YetAnotherConfigLib-2.2.0-for-1.19.2.jar"
 hash-format = "sha1"
-hash = "42f244d83321023711e237799cc2cba7adb4cee1"
+hash = "bcb8adacdb11b49fde416df76a55f6bc0ca48cfd"
 
 [update]
 [update.modrinth]
 mod-id = "1eAoo2KR"
-version = "VdIvtIwz"
+version = "bIVYcRpm"
