--- a/mods/cem.pw.toml
+++ b/mods/cem.pw.toml
@@ -1,13 +1,13 @@
 name = "Custom Entity Models"
-filename = "cem-0.7.3-1.19.jar"
+filename = "cem-0.7.3.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YOQCucah/versions/JlpuBMAJ/cem-0.7.3-1.19.jar"
+url = "https://cdn.modrinth.com/data/YOQCucah/versions/xlUWeQ8T/cem-0.7.3.jar"
 hash-format = "sha1"
-hash = "015e02cf3fd8a5e6b49dc0246c8665bdcf0a9a58"
+hash = "81f6ad8f2a8cd3b18a81234a30b6bb06674069b8"
 
 [update]
 [update.modrinth]
 mod-id = "YOQCucah"
-version = "JlpuBMAJ"
+version = "xlUWeQ8T"
