--- a/mods/entitytexturefeatures.pw.toml
+++ b/mods/entitytexturefeatures.pw.toml
@@ -1,13 +1,13 @@
 name = "Entity Texture Features [Fabric]"
-filename = "entity_texture_features_fabric_1.19.2-4.3.3.jar"
+filename = "entity_texture_features_fabric_1.19.4-4.3.5.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/BVzZfTc1/versions/Mm7KueIp/entity_texture_features_fabric_1.19.2-4.3.3.jar"
+url = "https://cdn.modrinth.com/data/BVzZfTc1/versions/4WOYtIge/entity_texture_features_fabric_1.19.4-4.3.5.jar"
 hash-format = "sha1"
-hash = "2a2a6bb3d618be61cb99eb98f305d3a28d9ce1c9"
+hash = "7e59cc6f46f24255c612f3410e5f081fd93bb74d"
 
 [update]
 [update.modrinth]
 mod-id = "BVzZfTc1"
-version = "Mm7KueIp"
+version = "4WOYtIge"
