--- a/mods/figura.pw.toml
+++ b/mods/figura.pw.toml
@@ -1,13 +1,13 @@
 name = "Figura"
-filename = "figura-0.1.0-rc.14+1.19.2.jar"
+filename = "figura-0.1.0-rc.14+1.19.4.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/B3csO4KD/versions/GYJfKR6m/figura-0.1.0-rc.14%2B1.19.2.jar"
+url = "https://cdn.modrinth.com/data/B3csO4KD/versions/tV8gGVuB/figura-0.1.0-rc.14%2B1.19.4.jar"
 hash-format = "sha1"
-hash = "9e8f58873e5408107767a743d4b1aa6c119323e0"
+hash = "e674b38820eb7b5b5d836ca061808fbf773c86fb"
 
 [update]
 [update.modrinth]
 mod-id = "B3csO4KD"
-version = "GYJfKR6m"
+version = "tV8gGVuB"
