--- a/mods/freecam.pw.toml
+++ b/mods/freecam.pw.toml
@@ -1,13 +1,13 @@
 name = "Freecam (Modrinth Edition)"
-filename = "freecam-modrinth-1.1.6+1.19.jar"
+filename = "freecam-fabric-modrinth-1.1.9+1.19.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/XeEZ3fK2/versions/yjLgFQ4M/freecam-modrinth-1.1.6%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/XeEZ3fK2/versions/U5aUYJ0z/freecam-fabric-modrinth-1.1.9%2B1.19.jar"
 hash-format = "sha1"
-hash = "bf8a291a31541332abfe5dd0bc2e24eb89fde81c"
+hash = "959bfc816ab8249a2fe7d99d59db22ba9aefdba1"
 
 [update]
 [update.modrinth]
 mod-id = "XeEZ3fK2"
-version = "yjLgFQ4M"
+version = "U5aUYJ0z"
