--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.19.2-1.5.2.jar"
+filename = "iris-mc1.19.4-1.5.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/7cPNddw8/iris-mc1.19.2-1.5.2.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/mVGu4Ze2/iris-mc1.19.4-1.5.2.jar"
 hash-format = "sha1"
-hash = "5377f13f7315dd48111bd431bb8ea6e6137a8c62"
+hash = "61ef0ba2a5e44e21b1608a3126cebca64da81a81"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "7cPNddw8"
+version = "mVGu4Ze2"
