--- a/mods/midnightcontrols.pw.toml
+++ b/mods/midnightcontrols.pw.toml
@@ -1,13 +1,13 @@
 name = "MidnightControls"
-filename = "midnightcontrols-1.7.4+1.19.jar"
+filename = "midnightcontrols-1.8.1+1.19.4.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/bXX9h73M/versions/HuoYq3E7/midnightcontrols-1.7.4%2B1.19.jar"
+url = "https://cdn.modrinth.com/data/bXX9h73M/versions/zAWwNTEr/midnightcontrols-1.8.1%2B1.19.4.jar"
 hash-format = "sha1"
-hash = "fc2ffef4d69cdd7e50de4891648003364133117c"
+hash = "c61ae7c390282e078ab9421d9da234437cdbd6f4"
 
 [update]
 [update.modrinth]
 mod-id = "bXX9h73M"
-version = "HuoYq3E7"
+version = "zAWwNTEr"
