--- a/mods/visuality.pw.toml
+++ b/mods/visuality.pw.toml
@@ -1,13 +1,13 @@
 name = "Visuality"
-filename = "visuality-0.5.6.jar"
+filename = "visuality-0.7.0.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/TrPcZLjs/visuality-0.5.6.jar"
+url = "https://cdn.modrinth.com/data/rI0hvYcd/versions/8YMUO06d/visuality-0.7.0.jar"
 hash-format = "sha1"
-hash = "86eafa73e5de6f6aec6401312f3b242a6e48b94b"
+hash = "359dc8a0e0b8d44ddf5d797729a6cbbe5da4d512"
 
 [update]
 [update.modrinth]
 mod-id = "rI0hvYcd"
-version = "TrPcZLjs"
+version = "8YMUO06d"
