--- a/mods/yacl.pw.toml
+++ b/mods/yacl.pw.toml
@@ -1,13 +1,13 @@
 name = "YetAnotherConfigLib"
-filename = "YetAnotherConfigLib-2.2.0-for-1.19.2.jar"
+filename = "YetAnotherConfigLib-2.3.1.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/bIVYcRpm/YetAnotherConfigLib-2.2.0-for-1.19.2.jar"
+url = "https://cdn.modrinth.com/data/1eAoo2KR/versions/A04AftxZ/YetAnotherConfigLib-2.3.1.jar"
 hash-format = "sha1"
-hash = "bcb8adacdb11b49fde416df76a55f6bc0ca48cfd"
+hash = "e4f00af82c5bdf15b4a5192dd90b2c884c05ba6e"
 
 [update]
 [update.modrinth]
 mod-id = "1eAoo2KR"
-version = "bIVYcRpm"
+version = "A04AftxZ"
