--- a/mods/architectury-api.pw.toml
+++ b/mods/architectury-api.pw.toml
@@ -1,13 +1,13 @@
 name = "Architectury API"
-filename = "architectury-6.5.69-fabric.jar"
+filename = "architectury-6.5.85-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/GEBcq08y/architectury-6.5.69-fabric.jar"
+url = "https://cdn.modrinth.com/data/lhGA9TYQ/versions/HoIJp48v/architectury-6.5.85-fabric.jar"
 hash-format = "sha1"
-hash = "09aaab6454e67e90143213fc711f5bed5adc053e"
+hash = "5795f772ea4a72049e38848eac80a005b01211d9"
 
 [update]
 [update.modrinth]
 mod-id = "lhGA9TYQ"
-version = "GEBcq08y"
+version = "HoIJp48v"
