--- a/mods/fabric-language-kotlin.pw.toml
+++ b/mods/fabric-language-kotlin.pw.toml
@@ -1,13 +1,13 @@
 name = "Fabric Language Kotlin"
-filename = "fabric-language-kotlin-1.9.3+kotlin.1.8.20.jar"
+filename = "fabric-language-kotlin-1.9.6+kotlin.1.8.22.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/MkcO8aQ0/fabric-language-kotlin-1.9.3%2Bkotlin.1.8.20.jar"
+url = "https://cdn.modrinth.com/data/Ha28R6CL/versions/5J7lguFF/fabric-language-kotlin-1.9.6%2Bkotlin.1.8.22.jar"
 hash-format = "sha1"
-hash = "2a3d3f8aa263ba7748550a94e97cf760712bc2c6"
+hash = "3e94269eef4a0a5217a79259788521b453f40010"
 
 [update]
 [update.modrinth]
 mod-id = "Ha28R6CL"
-version = "MkcO8aQ0"
+version = "5J7lguFF"
