--- a/mods/iris.pw.toml
+++ b/mods/iris.pw.toml
@@ -1,13 +1,13 @@
 name = "Iris Shaders"
-filename = "iris-mc1.19.2-1.5.2.jar"
+filename = "iris-mc1.19.2-1.6.4.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/YL57xq9U/versions/7cPNddw8/iris-mc1.19.2-1.5.2.jar"
+url = "https://cdn.modrinth.com/data/YL57xq9U/versions/9YEwbzW6/iris-mc1.19.2-1.6.4.jar"
 hash-format = "sha1"
-hash = "5377f13f7315dd48111bd431bb8ea6e6137a8c62"
+hash = "2420090afb4c08cc82614c26b82c6f3958f06ad8"
 
 [update]
 [update.modrinth]
 mod-id = "YL57xq9U"
-version = "7cPNddw8"
+version = "9YEwbzW6"
