--- a/mods/optigui.pw.toml
+++ b/mods/optigui.pw.toml
@@ -1,13 +1,13 @@
 name = "OptiGUI"
-filename = "optigui-2.0.0-beta.3.jar"
+filename = "optigui-2.1.2.jar"
 side = "client"
 
 [download]
-url = "https://cdn.modrinth.com/data/JuksLGBQ/versions/TM9YqUwX/optigui-2.0.0-beta.3.jar"
+url = "https://cdn.modrinth.com/data/JuksLGBQ/versions/YU9Yi2mO/optigui-2.1.2.jar"
 hash-format = "sha1"
-hash = "bb61c5649c1bb027df3f7f2b952fc4885c13eaee"
+hash = "ec6ee4f47fbe7850866ca2fac9aed14d9c4f0336"
 
 [update]
 [update.modrinth]
 mod-id = "JuksLGBQ"
-version = "TM9YqUwX"
+version = "YU9Yi2mO"
